--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="h3">18sp</dimen>
     <dimen name="body1">16sp</dimen>
     <dimen name="body2">14sp</dimen>
+    <dimen name="body3">17sp</dimen>
 </resources>
