--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#0D72FF</color>
@@ -13,4 +13,6 @@
     <color name="grade">#fff5d0</color>
     <color name="room_details">#e4f0fe</color>
     <color name="background">#f6f6f9</color>
+
+    <color name="override_transparent_color" tools:override="true">@android:color/transparent</color>
 </resources>
