--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -14,7 +14,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <Toolbar
+        <androidx.appcompat.widget.Toolbar
             android:id="@+id/app_bar"
             android:layout_width="match_parent"
             android:layout_height="49dp"
@@ -27,7 +27,7 @@
                 android:layout_gravity="center"
                 android:text="@string/order_title"
                 android:textSize="@dimen/h3" />
-        </Toolbar>
+        </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
     <TextView
@@ -86,14 +86,9 @@
 
         <Button
             android:id="@+id/button_super"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginBottom="28dp"
-            android:backgroundTint="@color/blue_button"
+            style="@style/AppButton"
+            android:layout_marginVertical="12dp"
             android:text="@string/btn_super" />
     </LinearLayout>
-
-    <!-- //TODO refactor all buttons? check corners  -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
