--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -42,49 +42,43 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:background="@drawable/white_rounded_corners"
+            android:background="@drawable/white_rounded_corners_15"
             android:padding="16dp"
             app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:background="@drawable/hotel_grade_rounded_corners"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingVertical="5dp"
+                android:paddingHorizontal="10dp"
+                android:layout_width="wrap_content"
                 android:layout_height="29dp">
 
-                <LinearLayout
-                    android:background="@drawable/hotel_grade_rounded_corners"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:paddingVertical="5dp"
-                    android:paddingHorizontal="10dp"
+                <ImageView
+                    android:src="@drawable/icon_star"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"/>
+
+                <TextView
+                    android:id="@+id/hotel_rating"
+                    android:layout_marginStart="3dp"
+                    android:textSize="@dimen/body1"
+                    android:textColor="@color/grade_text"
                     android:layout_width="wrap_content"
-                    android:layout_height="29dp">
+                    android:layout_height="wrap_content"
+                    tools:text="5"/>
 
-                    <ImageView
-                        android:src="@drawable/icon_star"
-                        android:layout_width="15dp"
-                        android:layout_height="15dp"/>
-
-                    <TextView
-                        android:id="@+id/hotel_rating"
-                        android:layout_marginStart="3dp"
-                        android:textSize="@dimen/body1"
-                        android:textColor="@color/grade_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        tools:text="5"/>
-
-                    <TextView
-                        android:id="@+id/hotel_rating_name"
-                        android:layout_marginStart="5dp"
-                        android:textSize="@dimen/body1"
-                        android:textColor="@color/grade_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        tools:text="Превосходно"/>
-
-                </LinearLayout>
+                <TextView
+                    android:id="@+id/hotel_rating_name"
+                    android:layout_marginStart="5dp"
+                    android:textSize="@dimen/body1"
+                    android:textColor="@color/grade_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="Превосходно"/>
 
             </LinearLayout>
 
@@ -112,7 +106,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:background="@drawable/white_rounded_corners"
+            android:background="@drawable/white_rounded_corners_15"
             android:orientation="vertical"
             android:padding="16dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -273,7 +267,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:background="@drawable/white_rounded_corners"
+            android:background="@drawable/white_rounded_corners_15"
             android:orientation="vertical"
             android:padding="16dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -326,7 +320,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:background="@drawable/white_rounded_corners"
+            android:background="@drawable/white_rounded_corners_15"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linear3"
@@ -337,7 +331,7 @@
             android:id="@+id/booking_add_tourist_part"
             android:orientation="horizontal"
             android:gravity="center_vertical"
-            android:background="@drawable/white_rounded_corners"
+            android:background="@drawable/white_rounded_corners_15"
             android:layout_marginTop="8dp"
             android:paddingHorizontal="16dp"
             android:paddingVertical="13dp"
@@ -379,7 +373,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:padding="16dp"
-            android:background="@drawable/white_rounded_corners"
+            android:background="@drawable/white_rounded_corners_15"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -478,7 +472,7 @@
 
         <LinearLayout
             android:id="@+id/booking_pay"
-            android:background="@drawable/white_rounded_corners"
+            android:background="@drawable/white_rounded_corners_15"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -491,13 +485,9 @@
 
             <Button
                 android:id="@+id/booking_pay_button"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:backgroundTint="@color/blue_button"
+                style="@style/AppButton"
                 android:text="@string/booking_to_pay_btn" />
-
         </LinearLayout>
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
