--- a/app/src/main/res/layout/item_tourist.xml
+++ b/app/src/main/res/layout/item_tourist.xml
@@ -18,6 +18,7 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/tourist_title"
                 android:text="@string/booking_tourist_one"
                 android:textSize="@dimen/h2"
                 android:layout_width="wrap_content"
@@ -36,8 +37,9 @@
                     android:layout_height="32dp">
 
                     <ImageView
+                        android:id="@+id/tourist_hide_expand_button"
                         android:src="@drawable/icon_arrow"
-                        android:rotation="90"
+                        android:rotation="-90"
                         android:padding="10dp"
                         android:layout_width="32dp"
                         android:layout_height="32dp"
@@ -60,12 +62,12 @@
                 android:layout_marginTop="8dp"
                 style="@style/BookingInputLayout">
 
-                <androidx.appcompat.widget.AppCompatEditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/booking_tourist_name"
                     android:text=""
                     style="@style/BookingEditText"
                     android:hint="@string/booking_tourist_name"
-                    android:inputType="textPersonName"/>
+                    android:inputType="textPersonName|textCapSentences"/>
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -73,12 +75,12 @@
                 android:layout_marginTop="8dp"
                 style="@style/BookingInputLayout">
 
-                <androidx.appcompat.widget.AppCompatEditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/booking_tourist_name_second"
                     android:text=""
                     style="@style/BookingEditText"
                     android:hint="@string/booking_tourist_name_second"
-                    android:inputType="textPersonName"/>
+                    android:inputType="textPersonName|textCapSentences"/>
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -103,6 +105,7 @@
                     android:id="@+id/booking_tourist_citizenship"
                     android:text=""
                     style="@style/BookingEditText"
+                    android:inputType="textCapSentences"
                     android:hint="@string/booking_tourist_citizenship" />
 
             </com.google.android.material.textfield.TextInputLayout>
