--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -22,7 +22,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
 <!--            //TODO recheck icon-->
-            <androidx.appcompat.widget.Toolbar
+            <Toolbar
                 android:id="@+id/app_bar"
                 android:layout_width="match_parent"
                 android:layout_height="49dp"
@@ -35,7 +35,7 @@
                     android:layout_gravity="center"
                     android:text="@string/booking_title"
                     android:textSize="@dimen/h3" />
-            </androidx.appcompat.widget.Toolbar>
+            </Toolbar>
         </com.google.android.material.appbar.AppBarLayout>
 
         <LinearLayout
