--- a/app/src/main/res/layout/fragment_rooms.xml
+++ b/app/src/main/res/layout/fragment_rooms.xml
@@ -15,11 +15,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.appcompat.widget.Toolbar
+        <Toolbar
             android:id="@+id/app_bar"
+            android:navigationIcon="@drawable/icon_arrow_back"
             android:layout_width="match_parent"
-            android:layout_height="49dp"
-            android:navigationIcon="@drawable/icon_arrow_back">
+            android:layout_height="49dp">
 
             <TextView
                 android:id="@+id/toolbar_title"
@@ -27,7 +27,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:textSize="@dimen/h3" />
-        </androidx.appcompat.widget.Toolbar>
+        </Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
